# TetraBots-ROS2BDI

./: README.md
Use_Case/: Agents_sensors_actions
Use_case/: CMakeLists.txt  package.xml
Use_case/launch/: oa.launch.py  tetrabotALF.launch.py
Use_case/launch/oa/: init_rrules.yaml
Use_case/launch/tetrabotALF/: init_bset.yaml
Use_case/pddl/: transporting-agent.pddl
Use_case/src/organizing_agent/sensors/: payload_in_sensor.cpp
Use_case/src/transporting_agent/actions/: drop.cpp  drop_cooperatively.cpp  pickup_cooperatively.cpp
Use_case/src/transporting_agent/sensors/: battery_sensor.cpp  position_sensor.cpp
airbus_demo/: CMakeLists.txt  package.xml
airbus_demo/launch/: oa.launch.py  ta1.launch.py
airbus_demo/launch/oa/: init_rrules.yaml
airbus_demo/launch/ta1/: init_bset.yaml  init_dset.yaml  init_rrules.yaml
airbus_demo/pddl/: organizing-agent.pddl  transporting-agent.pddl
airbus_demo/src/actions/: change_tool.cpp  charge.cpp  drop.cpp  moveto.cpp  pickup.cpp
airbus_demo/src/organizing_agent/actions/: ask_for_transportation.cpp
airbus_demo/src/organizing_agent/sensors/: payload_in_sensor.cpp  payload_sensor.cpp  payload_should_be_in_sensor.cpp
airbus_demo/src/transporting_agent/actions/: change_tool.cpp  drop_cooperatively.cpp  moveto.cpp  moveto_cooperatively.cpp  pickup.cpp  pickup_cooperatively.cpp
airbus_demo/src/transporting_agent/sensors/: battery_sensor.cpp  position_sensor.cpp  status_sensor.cpp  tool_sensor.cpp
bridge_interfaces/: CMakeLists.txt  package.xml  rosbridge_mapping_rules.yaml  temporary file
bridge_interfaces/Fwd _Master_Thesis _TetraBots/: botStatus.msg  stillAlive.msg  t265PosAndOri.msg
bridge_interfaces/Interfaces_first_folder/: StatusMessages.docx  hotLine.msg
bridge_interfaces/Interfaces_second_folder/: Unbenanntes Dokument (1).docx  jobDefinition.msg  teamCommand.msg
bridge_interfaces/msg/: BotStatus.msg  HotLine.msg  JobDefinition.msg  StillAlive.msg  T265PosAndOri.msg  TeamCommand.msg  TeamDefinition.msg
testing/: CMakeLists.txt  package.xml
testing/src/: subscriber.cpp
use_case/: AclMsg  AclMsg pub  Agents_sensors_actions  CMakeLists.txt  package.xml
use_case/launch/: oa.launch.py  tetrabotALF.launch.py  tetrabotBERT.launch.py  tetrabotC3PO.launch.py  tetrabotDORIE.launch.py
use_case/launch/tetrabotALF/: init_bset.yaml  init_dset.yaml  init_rrules.yaml
use_case/launch/tetrabotBERT/: init_bset.yaml  init_dset.yaml  init_rrules.yaml
use_case/launch/tetrabotC3PO/: init_bset.yaml  init_dset.yaml  init_rrules.yaml
use_case/launch/tetrabotDORIE/: init_bset.yaml  init_dset.yaml  init_rrules.yaml
use_case/pddl/: organizing-agent.pddl
use_case/src/organizing_agent/actions/: ask_for_transportation.cpp
use_case/src/organizing_agent/sensors/: payload_should_be_in_sensor.cpp
use_case/src/transporting_agent/actions/: charge.cpp  moveto.cpp  moveto_cooperatively.cpp
use_case/src/transporting_agent/sensors/: position_sensor.cpp  tool_sensor.cpp
